--- a/home.html
+++ b/home.html
@@ -50,10 +50,10 @@
         </main>
 
     </body>
-    <script src ="http://localhost:3000/socket.io/socket.io.js"></script>
+    <script src ="https://typeracersp.herokuapp.com/socket.io/socket.io.js"></script>
    
     <script>
-        const socket = io('http://localhost:3000');
+        const socket = io('https://typeracersp.herokuapp.com');
 
         const name = prompt("enter your name to join");
 
