--- a/race.html
+++ b/race.html
@@ -85,7 +85,7 @@
                 <a onclick="newgame()" class="btn2">New Race <i class="fas fa-chevron-circle-right"></i></a>
             </div>
             <div class="final-msg">
-                <h1 class="head">heading not yet decided</h1>
+                <h1 class="head">Welcome to the Podium !</h1>
                 <div class="mid">
                     <div class="side1"></div>
                     <div class="side2">
