--- a/home.html
+++ b/home.html
@@ -22,12 +22,12 @@
                 <div><h1>TYPERACER</h1></div>
                 <div><label>At Pole Position ?</label></div>
             <div><input type="text" placeholder="Your Name" id="myname"></div>
-                <div><button type="submit" onclick="entrace()">Enter the Race</button></div>
+                <div><button type="submit" onclick="entrace()">Enter the Race ! <i class="fas fa-flag-checkered" color="black"></i></button></div>
             </div>
         </div>
         
         <header>
-            <h1>typeracer part2</h1>
+            <h1>typeracer</h1>
             <div><p>active users</p><span class="total">0</span></div>
         </header>
 
@@ -35,6 +35,31 @@
 
         <main>
             <div class="adj">
+                <div class="s3bcard3">
+            <div class="uhimg">
+            </div>
+
+            <div class="condiv3">
+                <div class="hiddiv">
+                    <h1>
+                        ha aak random title aahe 
+                    </h1>
+                    <p>
+                        Utilising growth hacking in order to get buy in. Repurposing stakeholder management while remembering to re-target key demographics. Grow vertical integration to, consequently, create synergy. Synchronising custom solutions with the aim to gain traction. Amplifying branding to, consequently, re-target key demographics.
+                    </p>
+                    </div>
+            </div>
+
+            <div class="bcdiv3">
+                <h1>blog title</h1>
+                <div>
+                <p class="tag1">html</p>
+                <p class="tag2">css</p>
+                <p class="tag3">javascript</p>
+                </div>
+            </div>
+        </div>
+
             <div class="card" id="card1">
                 <p font-family="Ubuntu">Enter the Grand Prix !</p>
                 <button class="btn1" onclick="waiting()">Enter a Typing Race <i class="fas fa-chevron-circle-right"></i></button>
