--- a/home.html
+++ b/home.html
@@ -76,7 +76,7 @@
                     </div>
 
                     <div class="bcdiv2">
-                        <button class="btn2" onclick="practice()">ENTER A PRACTICE RACE</button>
+                        <button class="btn2" onclick="practice()">ENTER PRACTICE RACE</button>
                     </div>
                 </div>
             </div>
@@ -98,7 +98,7 @@
                     </div>
 
                     <div class="bcdiv1">
-                        <button class="btn3">RACE WITH FRIENDS!</button>
+                        <button class="btn3">RACE WITH FRIENDS</button>
                     </div>
                 </div>
             </div>
