--- a/home.html
+++ b/home.html
@@ -105,12 +105,12 @@
         </main>
 
     </body>
-    <script src ="https://typeracersp.herokuapp.com/socket.io/socket.io.js"></script>
+    <script src ="http://localhost:3000/socket.io/socket.io.js"></script>
    
     <script>
 
         var name;
-        const socket = io('https://typeracersp.herokuapp.com');
+        const socket = io('http://localhost:3000');
 
         // const name = prompt("enter your name to join");
 
